Last changes- Final draft

--- a/References.bib
+++ b/References.bib
@@ -8,6 +8,16 @@
   publisher={Springer International Publishing}
 }
 
+@book{blokdyk2017application,
+  title={Application Programming Interface: Implement, Administer, Manage},
+  author={Blokdyk, G.},
+  isbn={9781979906982},
+  url={https://books.google.com.mx/books?id=hoQ\_tAEACAAJ},
+  year={2017},
+  publisher={CreateSpace Independent Publishing Platform}
+}
+
+
 @article{Barbara_CL2018,
 author = {Barbara J. Grosz},
 title = {Smart Enough to Talk With Us? Foundations and Challenges for Dialogue Capable AI Systems},
@@ -107,6 +117,82 @@ publisher={ERIC}
   pages={13--22},
   year={2018},
   publisher={Henry Stewart Publications}
+}
+
+@article{cooper2012analytics_20519214,
+  title={What is analytics? Definition and essential characteristics},
+  author={Cooper, Adam and others},
+  journal={CETIS Analytics Series},
+  volume={1},
+  number={5},
+  pages={1--10},
+  year={2012},
+  publisher={Citeseer}
+}
+
+@article{russom2011big_201604201807,
+  title={Big data analytics},
+  author={Russom, Philip and others},
+  journal={TDWI best practices report, fourth quarter},
+  volume={19},
+  number={4},
+  pages={1--34},
+  year={2011}
+}
+
+
+@article{appelbaum2017nobel_sn,
+  title={Nobel in economics is awarded to Richard Thaler},
+  author={Appelbaum, Binyamin},
+  journal={New York Times},
+  year={2017}
+}
+
+@article{do2011behavioral_22029239,
+  title={Behavioral economics: Past, present, future},
+  author={Do, What Behavioral Economics Tries To},
+  journal={Advances in behavioral economics},
+  pages={1},
+  year={2011},
+  publisher={Princeton University Press}
+}
+
+@article{grable2008influence_232924221,
+  title={The influence of mood on the willingness to take financial risks},
+  author={Grable, John E and Roszkowski, Michael J},
+  journal={Journal of Risk Research},
+  volume={11},
+  number={7},
+  pages={905--923},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
+@article{kim2016hierarchical,
+  title={Hierarchical committee of deep convolutional neural networks for robust facial expression recognition},
+  author={Kim, Bo-Kyeong and Roh, Jihyeon and Dong, Suh-Yeon and Lee, Soo-Young},
+  journal={Journal on Multimodal User Interfaces},
+  volume={10},
+  number={2},
+  pages={173--189},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{chao2016audio,
+  title={Audio visual emotion recognition with temporal alignment and perception attention},
+  author={Chao, Linlin and Tao, Jianhua and Yang, Minghao and Li, Ya and Wen, Zhengqi},
+  journal={arXiv preprint arXiv:1603.08321},
+  year={2016}
+}
+
+@inproceedings{lee2012towards,
+  title={Towards unobtrusive emotion recognition for affective social communication},
+  author={Lee, Hosub and Choi, Young Sang and Lee, Sunjae and Park, IP},
+  booktitle={Consumer Communications and Networking Conference (CCNC), 2012 IEEE},
+  pages={260--264},
+  year={2012},
+  organization={IEEE}
 }
 
 @InProceedings{SaliimiSQLBasedChatbot2011_220868591,
@@ -267,4 +353,13 @@ url={https://search.proquest.com/docview/1855327260?accountid=28915},
   month=apr # "~10",
   publisher={Google Patents},
   note={US Patent 8,156,060}
+}
+
+@misc{currentreport_risktolerancequest,
+year={2012},
+month={Jul 31},
+title={Risk Tolerance Questionnaire},
+journal={Chicago: Morningstar Inc},
+language={English},
+url={https://corporate.morningstar.com/us/documents/nasdcompliance/iwt_currentreport_risktolerancequest.pdf},
 }
