reeplace Physisc analysis for behavioral economics

--- a/main.tex
+++ b/main.tex
@@ -100,16 +100,19 @@
 %%% Begin document
 \begin{document}
 \maketitle
-\centering
+\begin{center}
 Rebolledo Jovan
  
-Cedillo Xochitl
- 
-Enriquez Abraham 
+Cedillo Xochitl 
 
-Valle Lilia
+Enriquez Abraham 
+ 
+Valle Lilia 
 
 Gomez Tonatihu
+\end{center}
+
+
 
 
 
@@ -124,7 +127,7 @@ In this paper Intelligent Wallet™ and its design for a cryptocurrency chatbot 
 
 \end{abstract}
 
-\keywords{Chatbot, Artificial Intelligence, Machine Learning, Natural Language Processing, Users Experience, Convesational Comerce, Cryptocurrency, Emotions, Social Physics}
+\keywords{Chatbot, Artificial Intelligence, Machine Learning, Natural Language Processing, Users Experience, Convesational Comerce, Cryptocurrency, Emotions, Behavioral Economics}
 
 \newpage
 \tableofcontents
