Correcting Tona's name.

--- a/main.tex
+++ b/main.tex
@@ -106,10 +106,10 @@ Rebolledo Jovan
 Cedillo Xochitl 
 
 Enriquez Abraham 
- 
-Valle Lilia 
 
-Gomez Tonatihu
+Gomez Tonatiuh
+
+Valle Lilia 
 \end{center}
 
 
